1er essai rechercher  + pagination

--- a/src/PA/AnnonceBundle/Resources/views/Annonce/listeannonces.html.twig
+++ b/src/PA/AnnonceBundle/Resources/views/Annonce/listeannonces.html.twig
@@ -49,6 +49,7 @@
 	    {% else %}
 	    {{'no_result_annonces' | trans}}
 	    {% endif %}
+	    {% include 'AnnonceBundle:Default:pagination.html.twig' %}
 	</div>
 	<!-- /.row -->
 
