--- a/src/PA/GeneralBundle/Resources/views/Default/index.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/index.html.twig
@@ -90,13 +90,13 @@
 
 	<!-- Search Section -->
 	<h3>Utilisateurs</h3>	
-	<form role="form">
+	<form role="form" action="{{ path('afficher_resultat_annonce') }}" method="POST">
 		<div class="row">
 			<div class="col-md-12">
 				<!-- Ad name (text) section -->
 				<div class="form-group">
-					<label for="index_form_text">{{ 'index_form_text' | trans }}</label>	
-					<input id="index_form_text" placeholder="{{ 'index_form_pH_text' | trans }}" type="text" class="form-control" />
+					<label for="nom">{{ 'index_form_text' | trans }}</label>	
+					<input id="nom" placeholder="{{ 'index_form_pH_text' | trans }}" type="text" class="form-control" />
 				</div>
 			</div>
 		</div>
@@ -123,37 +123,46 @@
 							<div class="col-md-6">
 								<!-- Category filter (select list) section -->
 						        <div class="form-group">
-							        <label for="index_form_cat">{{ 'index_form_cat' | trans }}</label>
-						        	<select class="form-control" id="index_form_cat">
+							        <label for="cat">{{ 'index_form_cat' | trans }}</label>
+						        	<select class="form-control" id="cat">
 						        		<option value="1">Automobile</option>
 						        	</select>
 						        </div>
 							</div>
 						</div>
-						<div class="row"><br />
-							<div class="form-group">
-								<!-- Sector filter (checkbox) section -->
-								<div class="checkbox">
-									<div class="col-md-2">
-										<label>{{ 'index_form_sector' | trans }}</label>
+						<div class="row">
+							<div class="col-md-6">
+								<div class="form-group">
+									<!-- Sector filter (checkbox) section -->
+									<div class="checkbox">
+										<div class="col-md-2">
+											<label>{{ 'index_form_sector' | trans }}</label>
+										</div>
+										<div class="col-md-7">
+											<label for="index_from_cb_1">
+												<input id="index_from_cb_1" type="checkbox" /> {{ 'index_form_sector1' | trans }} 
+											</label>
+											<label for="index_from_cb_1">
+												<input id="index_from_cb_1" type="checkbox" /> {{ 'index_form_sector1' | trans }} 
+											</label>
+											<label for="index_from_cb_1">
+												<input id="index_from_cb_1" type="checkbox" /> {{ 'index_form_sector1' | trans }} 
+											</label>
+											<label for="index_from_cb_1">
+												<input id="index_from_cb_1" type="checkbox" /> {{ 'index_form_sector1' | trans }} 
+											</label>
+											<label for="index_from_cb_1">
+												<input id="index_from_cb_1" type="checkbox" /> {{ 'index_form_sector1' | trans }} 
+											</label>
+										</div>
 									</div>
-									<div class="col-md-7">
-										<label for="index_from_cb_1">
-											<input id="index_from_cb_1" type="checkbox" /> {{ 'index_form_sector1' | trans }} 
-										</label>
-										<label for="index_from_cb_1">
-											<input id="index_from_cb_1" type="checkbox" /> {{ 'index_form_sector1' | trans }} 
-										</label>
-										<label for="index_from_cb_1">
-											<input id="index_from_cb_1" type="checkbox" /> {{ 'index_form_sector1' | trans }} 
-										</label>
-										<label for="index_from_cb_1">
-											<input id="index_from_cb_1" type="checkbox" /> {{ 'index_form_sector1' | trans }} 
-										</label>
-										<label for="index_from_cb_1">
-											<input id="index_from_cb_1" type="checkbox" /> {{ 'index_form_sector1' | trans }} 
-										</label>
-									</div>
+								</div>
+							</div>
+							<div class="col-md-6">
+								<div class="form-group">
+									 <label for="group1">{{ 'index_form_type' | trans }} :</label><br />
+									 <input type="radio" name="group1" value="offre"> {{ 'offre' | trans }}
+									 <input type="radio" name="group1" value="demande"> {{ 'demande' | trans }}<br />
 								</div>
 							</div>
 						</div>
