Page compte terminée, reste à implémenter avec les infos du l'utilisateur. Amélioration suscinte de l'interface de gestion utilisateur

--- a/src/PA/GeneralBundle/Resources/views/Default/interfaceGestion.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/interfaceGestion.html.twig
@@ -7,16 +7,15 @@
 		<!-- Spacing section -->
 		<div class="clear"></div>
 
-		<!-- First section -->
-		{% if is_granted('ROLE_ADMIN') %}
-		<h2>Interface de gestion administrateur</h2>
+		<!-- Display section -->
+		<h2>{{ 'interfaceG_title' | trans }}</h2>
 		<div class="row">
-			<h3>Utilisateurs</h3>
+			<h3>{{ 'interfaceG_user_title' | trans }}</h3>
 			<label for="searchUserByIdOrName">{{ 'interfaceG_search_user' | trans }}</label>
 			<div class="input-group">
 				<input id="searchUserByIdOrName" placeholder="{{ 'interfaceG_user_placeHolder' | trans }}" type="text" class="form-control" />
 				<span class="input-group-btn">
-			  		<button class="btn btn-default" type="submit">OK</button>
+			  		<button class="btn btn-default" type="submit">{{ 'interfaceG_user_submitText' | trans }}</button>
 				</span>
 			</div>
 
@@ -41,10 +40,10 @@
 						<td>
 							<p>
 								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">
-									<i class="fa fa-gear"></i> Modifier
+									<i class="fa fa-gear"></i> {{ 'interfaceG_table_edit_button' | trans }}
 								</button>
 								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">
-									<i class="fa fa-times"></i> Supprimer
+									<i class="fa fa-times"></i> {{ 'interfaceG_table_delete_button' | trans }}
 								</button>
 							</p>
 						</td>
@@ -57,10 +56,10 @@
 						<td>
 							<p>
 								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">
-									<i class="fa fa-gear"></i> Modifier
+									<i class="fa fa-gear"></i> {{ 'interfaceG_table_edit_button' | trans }}
 								</button>
 								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">
-									<i class="fa fa-times"></i> Supprimer
+									<i class="fa fa-times"></i> {{ 'interfaceG_table_delete_button' | trans }}
 								</button>
 							</p>
 						</td>
@@ -73,10 +72,10 @@
 						<td>
 							<p>
 								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">
-									<i class="fa fa-gear"></i> Modifier
+									<i class="fa fa-gear"></i> {{ 'interfaceG_table_edit_button' | trans }}
 								</button>
 								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">
-									<i class="fa fa-times"></i> Supprimer
+									<i class="fa fa-times"></i> {{ 'interfaceG_table_delete_button' | trans }}
 								</button>
 							</p>
 						</td>
@@ -84,14 +83,14 @@
 				</tbody>
 			</table>
 			<form-group class="pull-right">
-				<a href="{{ path('pa_annonce_ajouter') }}" class="btn btn-success btn-sm active" role="button"><i class="fa fa-plus"></i> Ajouter</a>
+				<a href="{{ path('pa_annonce_ajouter') }}" class="btn btn-success btn-sm active" role="button"><i class="fa fa-plus"></i> {{ 'interfaceG_table_add_button' | trans }}</a>
 			</form-group>
 		</div>
 
 		<div class="clear"></div>
 
 		<div class="row">
-			<h3>Annonces</h3>
+			<h3>{{ 'interfaceG_ads_title' | trans }}</h3>
 			<label for="searchAdsByIdOrName">{{ 'interfaceG_search_ad' | trans }}</label>
 			<div class="input-group">
 				<input id="searchAdsByIdOrName" placeholder="{{ 'interfaceG_ads_placeHolder' | trans }}" type="text" class="form-control" />
@@ -168,10 +167,9 @@
 				</tbody>
 			</table>
 			<form-group class="pull-right">
-				<a href="#" class="btn btn-success btn-sm active" role="button"><i class="fa fa-plus"></i> Ajouter</a>
+				<a href="#" class="btn btn-success btn-sm active" role="button"><i class="fa fa-plus"></i> {{ 'interfaceG_table_add_button' | trans }}</a>
 			</form-group>
 		</div>
-		{% endif %}
 
 	</div>	<!-- /.container -->
 {% endblock %}
