--- a/src/PA/GeneralBundle/Resources/views/Default/mentions.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/mentions.html.twig
@@ -3,7 +3,7 @@
 	<!-- Page Content -->
 	<div class="container">
 
-	<!-- Marketing Icons Section -->
+	<!-- Spacing section -->
 	<div class="clear"></div>
 	<!-- /.row -->
 
