--- a/src/PA/UserBundle/Resources/views/layout.html.twig
+++ b/src/PA/UserBundle/Resources/views/layout.html.twig
@@ -43,27 +43,74 @@
 						</div>
 						{% endfor %}
 						{% endfor %}
+
+						{% if app.request.get('_route') == 'fos_user_security_login' %}
 						<div class="col-xs-12 col-sm-6 col-sm-offset-1">
+							<div class="col-md-8">
 							<fieldset>
-								<legend>{{ 'connexion_title' | trans }}</legend>
+								<legend>{{ 'connexion_title' | trans }}</legend>					
+								{% endif %}
+
+								{% if app.request.get('_route') == 'fos_user_registration_register' %}
+								<div class="col-md-4 col-sm-6">
+									<fieldset style="margin-bottom: -15px;">
+										<legend>{{ 'suscribe_title' | trans }}</legend>
+								{% endif %}
+
+
 								{% block fos_user_content %}
 								{% endblock fos_user_content %}
-							</fieldset>
-						</div>
-						<div class="col-md-4 col-sm-6">
-							<fieldset style="margin-bottom: -15px;">
-								<legend>{{ 'suscribe_title' | trans }}</legend>
-								<p>{{ 'suscribe_on_connexion_page' | trans }}</p>
-								<a href="{{ path('pa_general_inscription') }}">{{ 'suscribe_go' | trans }}</a>
+
+								{% if app.request.get('_route') == 'fos_user_security_login' %}
+									</fieldset>
+								</div>
+							</div>
+								{% endif %}
+
+
+
+								{% if app.request.get('_route') == 'fos_user_security_login' %}
+								<div class="col-md-4 col-sm-6">
+									<fieldset style="margin-bottom: -15px;">
+										<legend>{{ 'suscribe_title' | trans }}</legend>
+										<p>{{ 'suscribe_on_connexion_page' | trans }}</p>
+										<a href="{{ path('pa_general_inscription') }}">{{ 'suscribe_go' | trans }}</a>
+									</fieldset>
+								</div>
+								{% endif %}
+
 							</fieldset>
 						</div>
 					</div>
 				</div>
 			</div>
+			{% endif %}
 		</div>
 	</div>
-	{% endif %}
-</div>
-</div>
-<!-- /.container -->
-		{% endblock %}
+	<!-- /.container -->
+
+	<script>
+	$( document ).ready(function() {
+		$("input[type=text]").attr( "class", "form-control" );
+		$("input[type=password]").attr( "class", "form-control" );
+		$("input[type=email]").attr( "class", "form-control" );
+		$("select").attr( "class", "form-control" );
+		$("input[type=submit]").attr("class", "btn btn-success");
+		$("input[type=submit]").attr("style", "margin-top:30px; margin-bottom:20px; float:left;");
+		$("input[type=checkbox]").attr("style", "float:left;");
+		$("label[for=remember_me]").attr("style", "float:left;");
+
+		$("#fos_user_registration_form_email").attr( "placeholder", "E-mail" );
+		$("#fos_user_registration_form_username").attr( "placeholder", "Identifiant" );
+		$("#fos_user_registration_form_plainPassword_first").attr( "placeholder", "Mot de passe" );
+		$("#fos_user_registration_form_plainPassword_second").attr( "placeholder", "Confirmation" );
+		$("#fos_user_registration_form_us_nom").attr( "placeholder", "Nom" );
+		$("#fos_user_registration_form_us_prenom").attr( "placeholder", "Prénom" );
+		$("#fos_user_registration_form_us_tel").attr( "placeholder", "Téléphone" );
+
+		$("#username").attr( "placeholder", "Identifiant" );
+		$("#password").attr( "placeholder", "Mot de passe" );
+
+	});
+	</script>
+	{% endblock %}
