Lien vers Page confirmed modifé dans layout.html.twig

--- a/src/PA/UserBundle/Resources/views/layout.html.twig
+++ b/src/PA/UserBundle/Resources/views/layout.html.twig
@@ -24,7 +24,7 @@
 		<ul>
 			<li><a href="{{ path('pa_annonce_afficher_offre') }}">{{ 'Offres_title' | trans }}</a></li>
 			<li><a href="{{ path('pa_annonce_afficher_demande') }}">{{ 'Demandes_title' | trans }}</a></li>
-			<li><a href="{{ path('pa_general_mes_annonces') }}">{{ 'Mes_annonces_title' | trans }}</a></li>
+			<li><a href="{{ path('pa_annonce_afficher_mesannonces') }}">{{ 'Mes_annonces_title' | trans }}</a></li>
 			<li><a href="{{ path('pa_general_deconnexion') }}">{{ 'deconnexion_title' | trans }}</a></li>
 		</ul>
 		<!-- If the user is not connnected -->
