--- a/src/PA/GeneralBundle/Resources/views/Default/interfaceGestion.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/interfaceGestion.html.twig
@@ -37,14 +37,11 @@
 						<td>Bardot</td>
 						<td>super.brigitte@gg.fr</td>
 						<td>Looser</td>
-						<td>
+						<td align=center>
 							<p>
-								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">
-									<i class="fa fa-gear"></i> {{ 'interfaceG_table_edit_button' | trans }}
-								</button>
-								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">
-									<i class="fa fa-times"></i> {{ 'interfaceG_table_delete_button' | trans }}
-								</button>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-info" title="Voir détail" role="button"><i class="fa fa-fw fa-info"></i></a>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-primary" title="Modifier l'annonce" role="button"><i class="fa fa-fw fa-gear"></i></a>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-danger" title="Supprimer l'annonce" role="button"><i class="fa fa-fw fa-times"></i></a>
 							</p>
 						</td>
 					</tr>
@@ -53,14 +50,11 @@
 						<td>Bardot</td>
 						<td>super.brigitte@gg.fr</td>
 						<td>Looser</td>
-						<td>
+						<td align=center>
 							<p>
-								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">
-									<i class="fa fa-gear"></i> {{ 'interfaceG_table_edit_button' | trans }}
-								</button>
-								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">
-									<i class="fa fa-times"></i> {{ 'interfaceG_table_delete_button' | trans }}
-								</button>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-info" title="Voir détail" role="button"><i class="fa fa-fw fa-info"></i></a>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-primary" title="Modifier l'annonce" role="button"><i class="fa fa-fw fa-gear"></i></a>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-danger" title="Supprimer l'annonce" role="button"><i class="fa fa-fw fa-times"></i></a>
 							</p>
 						</td>
 					</tr>
@@ -69,14 +63,11 @@
 						<td>Bardot</td>
 						<td>super.brigitte@gg.fr</td>
 						<td>Looser</td>
-						<td>
+						<td align=center>
 							<p>
-								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">
-									<i class="fa fa-gear"></i> {{ 'interfaceG_table_edit_button' | trans }}
-								</button>
-								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">
-									<i class="fa fa-times"></i> {{ 'interfaceG_table_delete_button' | trans }}
-								</button>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-info" title="Voir détail" role="button"><i class="fa fa-fw fa-info"></i></a>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-primary" title="Modifier l'annonce" role="button"><i class="fa fa-fw fa-gear"></i></a>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-danger" title="Supprimer l'annonce" role="button"><i class="fa fa-fw fa-times"></i></a>
 							</p>
 						</td>
 					</tr>
@@ -119,14 +110,11 @@
 						<td>Cat</td>
 						<td>Title</td>
 						<td>15€</td>
-						<td>
+						<td align=center>
 							<p>
-								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">
-									<i class="fa fa-gear"></i>
-								</button>
-								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">
-									<i class="fa fa-times"></i>
-								</button>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-info" title="Voir détail" role="button"><i class="fa fa-fw fa-info"></i></a>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-primary" title="Modifier l'annonce" role="button"><i class="fa fa-fw fa-gear"></i></a>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-danger" title="Supprimer l'annonce" role="button"><i class="fa fa-fw fa-times"></i></a>
 							</p>
 						</td>
 					</tr>
@@ -136,14 +124,11 @@
 						<td>Cat</td>
 						<td>Title</td>
 						<td>15€</td>
-						<td>
+						<td align=center>
 							<p>
-								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">
-									<i class="fa fa-gear"></i>
-								</button>
-								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">
-									<i class="fa fa-times"></i>
-								</button>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-info" title="Voir détail" role="button"><i class="fa fa-fw fa-info"></i></a>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-primary" title="Modifier l'annonce" role="button"><i class="fa fa-fw fa-gear"></i></a>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-danger" title="Supprimer l'annonce" role="button"><i class="fa fa-fw fa-times"></i></a>
 							</p>
 						</td>
 					</tr>
@@ -153,14 +138,11 @@
 						<td>Cat</td>
 						<td>Title</td>
 						<td>15€</td>
-						<td>
+						<td align=center>
 							<p>
-								<button class="btn btn-primary btn-sm" data-title="Edit" data-toggle="modal" data-target="#edit" data-placement="top" rel="tooltip">
-									<i class="fa fa-gear"></i>
-								</button>
-								<button class="btn btn-danger btn-sm" data-title="Delete" data-toggle="modal" data-target="#delete" data-placement="right" rel="tooltip">
-									<i class="fa fa-times"></i>
-								</button>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-info" title="Voir détail" role="button"><i class="fa fa-fw fa-info"></i></a>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-primary" title="Modifier l'annonce" role="button"><i class="fa fa-fw fa-gear"></i></a>
+								<a href="{{ path('pa_annonce_detail_annonce') }}" class="btn btn-sm btn-danger" title="Supprimer l'annonce" role="button"><i class="fa fa-fw fa-times"></i></a>
 							</p>
 						</td>
 					</tr>
