--- a/src/PA/GeneralBundle/Resources/views/Default/liens.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/liens.html.twig
@@ -23,11 +23,11 @@
 		<div class="row">
 			<p>{{ 'liens_texte_intro' | trans }}</p>
 			<ul>
-				<li><a href="https://www.univ-rennes1.fr/">{{ 'liens_ur1' | trans }}</a></li>
-				<li><a href="http://www.istic.univ-rennes1.fr/">{{ 'liens_istic' | trans }}</a></li>
-				<li><a href="http://symfony.com/">{{ 'liens_symfony' | trans }}</a></li>
-				<li><a href="http://nicolas-gigou.fr/">{{ 'liens_gigou' | trans }}</a></li>
-				<li><a href="http://quentinlgdc.blogspot.fr/">{{ 'liens_lgdc' | trans }}</a></li>
+				<li><a href="https://www.univ-rennes1.fr/" target="_blank">{{ 'liens_ur1' | trans }}</a></li>
+				<li><a href="http://www.istic.univ-rennes1.fr/" target="_blank">{{ 'liens_istic' | trans }}</a></li>
+				<li><a href="http://symfony.com/" target="_blank">{{ 'liens_symfony' | trans }}</a></li>
+				<li><a href="http://nicolas-gigou.fr/" target="_blank">{{ 'liens_gigou' | trans }}</a></li>
+				<li><a href="http://quentinlgdc.blogspot.fr/" target="_blank">{{ 'liens_lgdc' | trans }}</a></li>
 			</ul>
 		</div>
 	</div>
