--- a/src/PA/GeneralBundle/Resources/views/Default/panier.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/panier.html.twig
@@ -1,3 +1,4 @@
+{% block title %}{{ 'Mon_compte_panier_title' | trans }}{% endblock %}
 {% extends "::base.html.twig" %}
 {% block body %}
 	<!-- Page Content -->
