--- a/src/PA/AnnonceBundle/Resources/views/Annonce/listeannonces.html.twig
+++ b/src/PA/AnnonceBundle/Resources/views/Annonce/listeannonces.html.twig
@@ -24,7 +24,7 @@
 	    {% for annonce in annonces %}
 		    <div class="col-md-4 col-sm-6">
 		        <div class="thumbnail">
-			        <a href="{{ annonce.animage }}">
+			        <a href="{{ path('pa_annonce_detail_annonce') }}">
 			            <img class="img-responsive img-portfolio img-hover" src="{{ annonce.animage }}" alt="{{ annonce.antitre }}">
 			        </a>
 				    <div class="text-center">
