--- a/src/PA/AnnonceBundle/Resources/views/Annonce/listeannonces.html.twig
+++ b/src/PA/AnnonceBundle/Resources/views/Annonce/listeannonces.html.twig
@@ -45,6 +45,7 @@
 				    </div>
 				</div>
 			</div>
+		{{ include('PAAnnonceBundle:Annonce:pagination.html.twig') }}
 		{% endfor %}
 	    {% else %}
 	    {{'no_result_annonces' | trans}}
