--- a/src/PA/AnnonceBundle/Resources/views/Annonce/pagination.html.twig
+++ b/src/PA/AnnonceBundle/Resources/views/Annonce/pagination.html.twig
@@ -5,7 +5,7 @@
 
         {% for p in range(1, pagination.pages_count) %}
           <li{% if p == pagination.page %} class="active"{% endif %}>
-            <a href="{{ path(pagination.route, pagination.route_params|merge({'page': p})) }}">{{ p }}</a>
+            <a href="{{ path(pagination.route, pagination.route_params) }}">{{ p }}</a>
           </li>
         {% endfor %}
         
