--- a/src/PA/GeneralBundle/Resources/views/Default/index.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/index.html.twig
@@ -127,7 +127,9 @@
 	    {% endif %}
 	</div>
 	<!-- /.row -->
-
+	<div class="row">
+		{{ include('PAAnnonceBundle:Annonce:pagination.html.twig') }}
+	</div>
 	</div>
 	<!-- /.container -->
 
