--- a/src/PA/GeneralBundle/Resources/views/Default/rechercher.html.twig
+++ b/src/PA/GeneralBundle/Resources/views/Default/rechercher.html.twig
@@ -22,6 +22,7 @@
 							<div class="form-group">
 								<label for="index_form_dept">{{ 'index_form_dept' | trans }}</label>
 								<select class="form-control" id="index_form_dept">
+									<option value="">Choisir un département</option>
 									<option value="armor">22 .Côtes d'armor</option>
 									<option value="finistere">29. Finistère</option>
 									<option value="ile">35. Ile et Vilaine</option>
@@ -34,6 +35,7 @@
 					        <div class="form-group">
 						        <label for="index_form_cat">{{ 'index_form_cat' | trans }}</label>
 					        	<select name="cat" class="form-control" id="index_form_cat">
+					        		<option value="">Choisir une catégorie</option>
 					        		<option value="1">Automobile</option>
 					        	</select>
 					        </div>
