--- a/src/PA/AnnonceBundle/Resources/views/Annonce/pagination.html.twig
+++ b/src/PA/AnnonceBundle/Resources/views/Annonce/pagination.html.twig
@@ -1,3 +1,4 @@
+
 <nav>
   <ul class="pagination">
 
@@ -5,7 +6,7 @@
 
         {% for p in range(1, pagination.pages_count) %}
           <li{% if p == pagination.page %} class="active"{% endif %}>
-            <a href="{{ path(pagination.route, pagination.route_params) }}">{{ p }}</a>
+            <a href="{{ path(pagination.route, { 'page' : p }) }}">{{ p }}</a>
           </li>
         {% endfor %}
         
